--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      RAILS_MASTER_KEY: ${{ secrets.RAILS_DEPLOY_MASTER_KEY }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Ruby 3.2.2
@@ -17,6 +15,12 @@ jobs:
         with:
           ruby-version: 3.2.2
           bundler-cache: true
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Setup deploy key
         run: |
           aws s3 cp s3://${{ secrets.SSH_KEY_S3_BUCKET }}/${{ secrets.SSH_KEY_S3_OBJECT_KEY }} ${{ secrets.CAP_DEPLOY_KEY_PATH }}
