--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,4 @@ jobs:
           CAP_DEPLOY_USER: ${{ secrets.CAP_DEPLOY_USER }}
           CAP_DEPLOY_KEY_PATH: ${{ secrets.CAP_DEPLOY_KEY_PATH }}
           CAP_HOME: ${{ secrets.CAP_HOME }}
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
