Update deploy workflow to remove deploy key

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,5 @@ jobs:
           CAP_HOME: ${{ secrets.CAP_HOME }}
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
           RAILS_PRODUCTION_HOST: ${{ secrets.RAILS_PRODUCTION_HOST }}
+      - name: Remove deploy key
+        run: rm -f ${{ secrets.CAP_DEPLOY_KEY_PATH }}
